--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>MI CHICA PRECIOSA !</h1>
-    <h3>HOLA MI VIDA HERMOSA, para imnovar te hare una carta virtual, quiero decirte que me <br>encuentro muy feliz de estar contigo te agradezco mucho que seas mi novia, gracias por  <br>apoyarme te amo mucho mi cielito lindo, besitos mi farito de luz. </h3>
+    <h3>HOLA MI VIDA HERMOSA, para innovar te hare una carta virtual, quiero decirte que me <br>encuentro muy feliz de estar contigo te agradezco mucho que seas mi novia, gracias por  <br>apoyarme te amo mucho mi cielito lindo, besitos mi farito de luz. </h3>
     <img  id= "respuestaImagen" src="fotitos/minovia.jpg" alt="minovia">
     <h4>te amo mi hani preciosa</h4>
     <h5>te amo, de parte de tu amorchi</h5>
