--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
     <h1>MI CHICA PRECIOSA !</h1>
     <h3>HOLA MI VIDA HERMOSA, para innovar te hare una carta virtual, quiero decirte que me <br>encuentro muy feliz de estar contigo te agradezco mucho que seas mi novia, gracias por  <br>apoyarme te amo mucho mi cielito lindo, besitos mi farito de luz. </h3>
-   <div class=".contenedor-imagen"><img src="fotitos/minovia.jpg" alt=" minovia"> <img src="https://i.ytimg.com/vi/9IZjaSLIKuY/maxresdefault.jpg" alt="teamoculona">
-
-   </div>
-
+   
+    <div class=".contenedor-imagen">
+        <img src="fotitos/minovia.jpg" alt="Minovia">
+        <video width="600" height="auto" controls>
+            <source src="fotitos/WhatsApp Video 2023-11-21 at 5.56.32 PM.mp4" type="video/mp4">
+            
+        </video>
+    </div>
     <h4>te amo mi hani preciosa</h4>
     <h5>te amo, de parte de tu amorchi</h5>
 </body>
