--- a/index.html
+++ b/index.html
@@ -5,39 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mivida mi vida</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+<style>
+    body{
+        background-color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        text-align: center;   
+        height: 100%;
+    }
+   body, html {height: 100%;}
+</style>
 </head>
 <body>
-    <h1>MI CHICA PRECIOSA !</h1>
-    <h3>HOLA MI VIDA HERMOSA, para innovar te hare una carta virtual, quiero decirte que me <br>encuentro muy feliz de estar contigo te agradezco mucho que seas mi novia, gracias por  <br>apoyarme te amo mucho mi cielito lindo, besitos mi farito de luz. </h3>
-   
-    <div class=".contenedor-imagen">
-      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <video class="d-block w-100"controls> <source src="fotitos/WhatsApp Video 2023-11-21 at 5.56.32 PM.mp4" type="video/mp4"></video>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="fotitos/minovia.jpg" class="d-block w-100" alt="minovia">
-          </div>
-          <div class="carousel-item">
-            <video class="d-block w-100"controls> <source src="fotitos/WhatsApp Video 2023-11-25 at 7.41.44 PM.mp4" type="video/mp4"></video>
+    <div class="d-flex justify-content-center align-items-center" style="height: 100%;">
+    <div class="card text-bg-text-bg-light p-3" style="max-width: 18rem;">
+        <div class="card-header">¿me amas?</div>
+        <div class="card-body">
+          <p class="card-text">   
+             <div class="pregunta">
+                 <a class="btn btn-dark" href="index.html" role="button">si</a>
+                 <a class="btn btn-dark" href="inicio.html" role="button">no</a>
+              </div>
+             </p>
+     </div>
 
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+  </div>
+</div>
 
-    </div>
-    <h4>te amo mi hani preciosa</h4>
-    <h5>te amo, de parte de tu amorchi</h5>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
