--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="card-body">
           <p class="card-text">   
              <div class="pregunta">
-                 <a class="btn btn-dark" href="index.html" role="button">si</a>
-                 <a class="btn btn-dark" href="inicio.html" role="button">no</a>
+                 <a class="btn btn-dark" href="inicio.html" role="button">si</a>
+                 <a class="btn btn-dark" href="index.html" role="button">no</a>
               </div>
              </p>
      </div>
